# Nidra

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_digests.py  0003_tasks.py  0004_finance.py  0005_institution_logo.py  0006_institution_color.py  0007_holding_lots.py  0008_investment_transactions.py  0009_connectors.py  0010_connector_app_credentials.py  0011_connector_accounts.py  0012_calendar_event_account.py  0013_browser_activity_events.py  0014_browser_activity_metrics.py  0015_browser_activity_context_id.py  0016_user_model_snapshots.py  0017_dreams.py  0018_user_model_derivation.py  0019_scenarios.py
backend/scripts/: engine_smoke.py
backend/src/pragya_assistant/: __init__.py  config.py  crypto.py  logging_config.py  main.py  mcp_memory.py
backend/tests/: conftest.py  fakes.py  test_config.py  test_crypto.py  test_smoke.py
backend/tests/agent/: test_activity_tools.py  test_claude_code_engine.py  test_codex_engine.py  test_completion.py  test_core.py  test_egress.py  test_engine_factory.py  test_guard.py  test_hardening.py  test_memory_tools.py  test_secret_scrub.py  test_tools.py  test_toolset.py  test_untrusted.py
backend/tests/api/: test_browser_activity.py  test_chat.py  test_connectors_api.py  test_connectors_wiring.py  test_conversations_api.py  test_cors.py  test_deps_wiring.py  test_digests_api.py  test_dreams.py  test_finance_api.py  test_fx_api.py  test_health.py  test_opinions.py  test_scenarios.py
backend/tests/calendars/: test_service.py  test_tools.py
backend/tests/channels/: test_client.py  test_telegram.py  test_telegram_poller.py
backend/tests/connectors/: _fakes.py  test_account_store.py  test_contract.py  test_manager.py  test_models.py  test_multi_account.py  test_oauth.py  test_registry.py  test_store.py
backend/tests/digests/: test_prompts.py  test_service.py  test_store.py
backend/tests/email_inbox/: test_attachments.py  test_drafts.py  test_parse.py  test_safety.py  test_tools.py
(+325 files in other folders)
