[project]
name = "pragya-assistant"
description = "Pragya — single-user personal assistant (backend)"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "openai>=1.40",
    "claude-agent-sdk>=0.1",
    "icalendar>=5.0",
    "recurring-ical-events>=2.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "cryptography>=43",
    "imap-tools>=1.5",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6",
    "plaid-python>=18",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pragya_assistant/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pragya_assistant"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert statements (S101), hardcoded test credentials (S105/S106),
# and non-cryptographic hash functions in fakes (S324).
"tests/**" = ["S101", "S105", "S106", "S324"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pgvector.*",
    "claude_agent_sdk.*",
    "icalendar.*",
    "recurring_ical_events.*",
    "imap_tools.*",
    "markitdown.*",
    "plaid.*",
]
ignore_missing_imports = true

# The MCP SDK's server decorators are loosely typed; relax only the glue module.
[[tool.mypy.overrides]]
module = ["pragya_assistant.mcp_memory"]
disallow_untyped_decorators = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]
